--- a/index.html.erb
+++ b/index.html.erb
@@ -5,7 +5,17 @@
     <title><%= robot_name%></title>
   </head>
   <body>
+    <h1><%= bendunit1.say_hi %></h1>
     <h1><%= bendunit1.say_name %></h1>
     <h1><%= bendunit1.bend(object) %></h1>
+    <!-- <h1>Robo-students</h1>
+      <ul>
+        <% robostudents.each do |name| %>
+        <li>
+          <%= name.say_name %>
+        </li>
+        <% end %>
+      </ul> -->
+
   </body>
 </html>
