--- a/index.html.erb
+++ b/index.html.erb
@@ -5,17 +5,26 @@
     <title><%= robot_name%></title>
   </head>
   <body>
-    <h1><%= bendunit1.say_hi %></h1>
-    <h1><%= bendunit1.say_name %></h1>
-    <h1><%= bendunit1.bend(object) %></h1>
-    <!-- <h1>Robo-students</h1>
+    <h1><%= hello %></h1>
+    <h1><%= name_said %></h1>
+    <h1><%= bending %></h1>
+    <h1>Robo-students</h1>
       <ul>
-        <% robostudents.each do |name| %>
+        <% robostudents1.each do |name| %>
         <li>
           <%= name.say_name %>
         </li>
         <% end %>
-      </ul> -->
+      </ul>
+    <h1>Robo-students Part II</h1>
+      <ul>
+        <% robostudents2.each do |name| %>
+        <li>
+          <%= name.say_name %>
+        </li>
+        <% end %>
+      </ul>
+
 
   </body>
 </html>
